tests/NormalTests/paczka1/small_fuzzy/96606175.err
Error in line 1: 1IP319 A239 99,0
Error in line 3: 1IP319 S750 55,0
Error in line 11: zZ0nvQzLEc4 A975 -1,6
Error in line 15: zZ0nvQzLEc4 S725 84,7
